2022-10-02T08:07:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167838397
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 67 80 / 74 87
* notice: next accum: outdated-unq outdated-all / unq all: 67 80 / 75 88
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-02]

2022-09-30T08:15:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3157280444
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 67 80 / 73 86
* notice: next accum: outdated-unq outdated-all / unq all: 67 80 / 74 87
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-30]

2022-09-29T08:11:35Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3149667954
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 66 79 / 73 86
* notice: next accum: outdated-unq outdated-all / unq all: 67 80 / 73 86
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-15] / []

2022-09-28T08:11:17Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3141870151
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 65 78 / 72 85
* notice: next accum: outdated-unq outdated-all / unq all: 66 79 / 73 86
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-14] / [2022-09-28]

2022-09-27T08:15:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134007595
* notice: last 14d: unq all: 2 7