@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-02T08:07:33Z",
-  "count_outdated" : 80,
-  "uniques_outdated" : 67,
+  "timestamp" : "2022-10-03T08:08:54Z",
+  "count_outdated" : 81,
+  "uniques_outdated" : 68,
   "count" : 88,
   "uniques" : 75,
   "clones" : [
-    {
-      "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 1,
