@@ -1,3 +1,11 @@
+2022-10-03T08:08:54Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172568582
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 67 80 / 75 88
+* notice: next accum: outdated-unq outdated-all / unq all: 68 81 / 75 88
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-19] / []
+
 2022-10-02T08:07:33Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167838397
 * notice: last 14d: unq all: 2 8
